2011-10-19  Gustavo Noronha Silva  <gns@gnome.org>

        [GTK] Streamline wk1 documentation build
        https://bugs.webkit.org/show_bug.cgi?id=70447

        Reviewed by Martin Robinson.

        * GNUmakefile.am: move files pertaining to the docs build to the
          docs GNUmakefile.am;
        * GNUmakefile.gtk-doc.make: incorporate the gtk-doc makefile, and customize it
          to our non-recursive build;
        * docs/GNUmakefile.am: simplification and adaption to work with the
          rest of the build system.

2011-10-19  Zan Dobersek  <zandobersek@gmail.com>

        [Gtk][Geolocation] Build guards missing in geolocation clients
        https://bugs.webkit.org/show_bug.cgi?id=70420

        Reviewed by Gustavo Noronha Silva.

        Adds build guards that were forgotten when client-based
        geolocation was introduced in r97746. This should make builds
        without geolocation support succeed again.

        * WebCoreSupport/GeolocationClientGtk.cpp:
        * WebCoreSupport/GeolocationClientGtk.h:
        * webkit/webkitwebview.cpp:
        (webkit_web_view_init):

2011-10-18  Zan Dobersek  <zandobersek@gmail.com>

        [Gtk] Support for client-based geolocation
        https://bugs.webkit.org/show_bug.cgi?id=64970

        Reviewed by Martin Robinson.

        Add DumpRenderTree support functions for client-based geolocation tests
        and implement GeolocationClientGtk. The implementation is based on Zecke's
        implementation of GeolocationService class in WebCore, which is now redundant
        and subsequently removed.

        * GNUmakefile.am: Add GeolocationClientGtk.* files to compilation.
        * WebCoreSupport/DumpRenderTreeSupportGtk.cpp: Add support functions to operate
        with GeolocationClientMock.
        (DumpRenderTreeSupportGtk::resetGeolocationClientMock):
        (DumpRenderTreeSupportGtk::setMockGeolocationPermission):
        (DumpRenderTreeSupportGtk::setMockGeolocationPosition):